--- a/client/package.json
+++ b/client/package.json
@@ -10,14 +10,21 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@radix-ui/react-select": "2.2.5",
+    "@radix-ui/react-slot": "1.2.3",
+    "class-variance-authority": "0.7.1",
+    "clsx": "2.1.1",
+    "lucide-react": "0.524.0",
     "next": "15.3.4",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "tailwind-merge": "3.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "3.3.1",
     "@next/eslint-plugin-next": "15.3.4",
     "@tailwindcss/postcss": "4.1.11",
+    "@tailwindcss/typography": "0.5.16",
     "@types/node": "24.0.4",
     "@types/react": "19.1.8",
     "@types/react-dom": "19.1.6",
@@ -29,6 +36,7 @@
     "prettier": "3.6.1",
     "prettier-plugin-tailwindcss": "0.6.13",
     "tailwindcss": "4.1.11",
+    "tw-animate-css": "1.3.4",
     "typescript": "5.8.3"
   }
 }
