--- a/client/pnpm-workspace.yaml
+++ b/client/pnpm-workspace.yaml
@@ -1,6 +1,7 @@
 onlyBuiltDependencies:
-  - "@tailwindcss/oxide"
+  - '@tailwindcss/oxide'
+  - esbuild
   - sharp
   - unrs-resolver
 
-savePrefix: ""
+savePrefix: ''
