--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --write .",
-    "test": "vitest"
+    "test": "vitest",
+    "prepare": "cd .. && husky"
   },
   "dependencies": {
     "@radix-ui/react-select": "2.2.5",
@@ -38,13 +39,24 @@
     "eslint-config-prettier": "10.1.5",
     "eslint-plugin-prettier": "5.5.1",
     "eslint-plugin-react-hooks": "5.2.0",
+    "husky": "9.1.7",
     "jsdom": "26.1.0",
+    "lint-staged": "16.1.2",
     "prettier": "3.6.1",
     "prettier-plugin-tailwindcss": "0.6.13",
     "tailwindcss": "4.1.11",
     "tw-animate-css": "1.3.4",
     "typescript": "5.8.3",
     "vitest": "3.2.4"
+  },
+  "lint-staged": {
+    "**/*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "**/*.{json,css,md,scss,yaml}": [
+      "prettier --write"
+    ]
   },
   "packageManager": "pnpm@10.12.4+sha512.5ea8b0deed94ed68691c9bad4c955492705c5eeb8a87ef86bc62c74a26b037b08ff9570f108b2e4dbd1dd1a9186fea925e527f141c648e85af45631074680184"
 }
