--- a/client/package.json
+++ b/client/package.json
@@ -13,11 +13,14 @@
     "prepare": "cd .. && husky"
   },
   "dependencies": {
+    "@iiasa/ixmp4-ts": "0.6.0",
+    "@lukemorales/query-key-factory": "1.3.4",
     "@radix-ui/react-dialog": "1.1.14",
     "@radix-ui/react-select": "2.2.5",
     "@radix-ui/react-slot": "1.2.3",
     "@radix-ui/react-visually-hidden": "1.2.3",
     "@t3-oss/env-nextjs": "0.13.8",
+    "@tanstack/react-query": "5.81.5",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "framer-motion": "12.23.0",
@@ -34,6 +37,7 @@
     "@next/eslint-plugin-next": "15.3.4",
     "@tailwindcss/postcss": "4.1.11",
     "@tailwindcss/typography": "0.5.16",
+    "@tanstack/eslint-plugin-query": "5.81.2",
     "@testing-library/dom": "10.4.0",
     "@testing-library/jest-dom": "6.6.3",
     "@testing-library/react": "16.3.0",
