--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "scenario-compass-platform-client",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
@@ -16,13 +17,16 @@
     "@radix-ui/react-select": "2.2.5",
     "@radix-ui/react-slot": "1.2.3",
     "@radix-ui/react-visually-hidden": "1.2.3",
+    "@t3-oss/env-nextjs": "0.13.8",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
+    "jiti": "2.4.2",
     "lucide-react": "0.524.0",
     "next": "15.3.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "tailwind-merge": "3.3.1"
+    "tailwind-merge": "3.3.1",
+    "zod": "3.25.71"
   },
   "devDependencies": {
     "@eslint/eslintrc": "3.3.1",
