--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@t3-oss/env-nextjs": "0.13.8",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
+    "framer-motion": "12.23.0",
     "jiti": "2.4.2",
     "lucide-react": "0.524.0",
     "next": "15.3.4",
