--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,10 @@
   "dependencies": {
     "@iiasa/ixmp4-ts": "0.6.0",
     "@lukemorales/query-key-factory": "1.3.4",
+    "@radix-ui/react-checkbox": "1.3.2",
     "@radix-ui/react-dialog": "1.1.14",
+    "@radix-ui/react-label": "2.1.7",
+    "@radix-ui/react-popover": "1.1.14",
     "@radix-ui/react-select": "2.2.5",
     "@radix-ui/react-slot": "1.2.3",
     "@radix-ui/react-visually-hidden": "1.2.3",
@@ -23,10 +26,12 @@
     "@tanstack/react-query": "5.81.5",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
+    "cmdk": "1.1.1",
     "framer-motion": "12.23.0",
     "jiti": "2.4.2",
     "lucide-react": "0.524.0",
     "next": "15.3.4",
+    "nuqs": "2.4.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "tailwind-merge": "3.3.1",
