--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "cmdk": "1.1.1",
+    "d3": "7.9.0",
     "framer-motion": "12.23.0",
     "jiti": "2.4.2",
     "lucide-react": "0.524.0",
@@ -46,6 +47,7 @@
     "@testing-library/dom": "10.4.0",
     "@testing-library/jest-dom": "6.6.3",
     "@testing-library/react": "16.3.0",
+    "@types/d3": "7.4.3",
     "@types/node": "24.0.4",
     "@types/react": "19.1.8",
     "@types/react-dom": "19.1.6",
