--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@iiasa/ixmp4-ts": "0.6.0",
     "@lukemorales/query-key-factory": "1.3.4",
+    "@radix-ui/react-accordion": "1.2.11",
     "@radix-ui/react-checkbox": "1.3.2",
     "@radix-ui/react-dialog": "1.1.14",
     "@radix-ui/react-label": "2.1.7",
