--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,7 @@
     "prepare": "cd .. && husky"
   },
   "dependencies": {
-    "@iiasa/ixmp4-ts": "0.6.0",
+    "@iiasa/ixmp4-ts": "0.7.0",
     "@lukemorales/query-key-factory": "1.3.4",
     "@radix-ui/react-accordion": "1.2.11",
     "@radix-ui/react-checkbox": "1.3.2",
@@ -22,6 +22,7 @@
     "@radix-ui/react-popover": "1.1.14",
     "@radix-ui/react-select": "2.2.5",
     "@radix-ui/react-slot": "1.2.3",
+    "@radix-ui/react-tooltip": "1.2.8",
     "@radix-ui/react-visually-hidden": "1.2.3",
     "@t3-oss/env-nextjs": "0.13.8",
     "@tanstack/react-query": "5.81.5",
