--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -12,9 +12,20 @@ WORKDIR /app
 COPY --from=deps /app/node_modules ./node_modules
 COPY . .
 
+ARG NEXT_PUBLIC_API_BASE_URL
+ARG NEXT_PUBLIC_API_APP_NAME
+ARG NEXT_PUBLIC_FEATURE_FLAG_HIDE_LEARN_BY_TOPIC_PAGE
+
+ENV NEXT_PUBLIC_API_BASE_URL=$NEXT_PUBLIC_API_BASE_URL
+ENV NEXT_PUBLIC_API_APP_NAME=$NEXT_PUBLIC_API_APP_NAME
+ENV NEXT_PUBLIC_FEATURE_FLAG_HIDE_LEARN_BY_TOPIC_PAGE=$NEXT_PUBLIC_FEATURE_FLAG_HIDE_LEARN_BY_TOPIC_PAGE
+
 ENV NEXT_TELEMETRY_DISABLED=1
 
-RUN corepack enable pnpm && pnpm run build;
+RUN --mount=type=secret,id=NEXT_PUBLIC_API_CREDENTIALS \
+    export NEXT_PUBLIC_API_CREDENTIALS="$(cat /run/secrets/NEXT_PUBLIC_API_CREDENTIALS)" && \
+    corepack enable pnpm && \
+    pnpm run build
 
 FROM base AS runner
 WORKDIR /app
