--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,7 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint .",
     "format": "prettier --write .",
     "test": "vitest",
     "prepare": "cd .. && husky"
@@ -33,9 +33,10 @@
     "clsx": "2.1.1",
     "cmdk": "1.1.1",
     "d3": "7.9.0",
+    "eslint-plugin-react": "7.37.5",
     "jiti": "2.4.2",
     "lucide-react": "0.524.0",
-    "next": "15.3.4",
+    "next": "15.5.7",
     "nuqs": "2.4.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -44,7 +45,8 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "3.3.1",
-    "@next/eslint-plugin-next": "15.3.4",
+    "@eslint/js": "9.39.1",
+    "@next/eslint-plugin-next": "16.0.7",
     "@tailwindcss/postcss": "4.1.11",
     "@tailwindcss/typography": "0.5.16",
     "@tanstack/eslint-plugin-query": "5.81.2",
@@ -57,7 +59,7 @@
     "@types/react-dom": "19.1.6",
     "@vitejs/plugin-react": "4.6.0",
     "eslint": "9.29.0",
-    "eslint-config-next": "15.3.4",
+    "eslint-config-next": "16.0.7",
     "eslint-config-prettier": "10.1.5",
     "eslint-plugin-prettier": "5.5.1",
     "eslint-plugin-react-hooks": "5.2.0",
