--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
     "d3": "7.9.0",
     "eslint-plugin-react": "7.37.5",
     "jiti": "2.4.2",
+    "jotai": "2.16.1",
     "lucide-react": "0.524.0",
     "next": "15.5.7",
     "nuqs": "2.4.3",
