--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -16,11 +16,15 @@ ARG NEXT_PUBLIC_API_BASE_URL
 ARG NEXT_PUBLIC_API_APP_NAME
 ARG NEXT_PUBLIC_FEATURE_FLAG_HIDE_LEARN_BY_TOPIC_PAGE
 ARG NEXT_PUBLIC_PRE_LAUNCH_MODE
+ARG NEXT_PUBLIC_MATOMO_URL
+ARG NEXT_PUBLIC_MATOMO_SITE_ID
 
 ENV NEXT_PUBLIC_API_BASE_URL=$NEXT_PUBLIC_API_BASE_URL
 ENV NEXT_PUBLIC_API_APP_NAME=$NEXT_PUBLIC_API_APP_NAME
 ENV NEXT_PUBLIC_FEATURE_FLAG_HIDE_LEARN_BY_TOPIC_PAGE=$NEXT_PUBLIC_FEATURE_FLAG_HIDE_LEARN_BY_TOPIC_PAGE
 ENV NEXT_PUBLIC_PRE_LAUNCH_MODE=$NEXT_PUBLIC_PRE_LAUNCH_MODE
+ENV NEXT_PUBLIC_MATOMO_URL=$NEXT_PUBLIC_MATOMO_URL
+ENV NEXT_PUBLIC_MATOMO_SITE_ID=$NEXT_PUBLIC_MATOMO_SITE_ID
 
 ENV NEXT_TELEMETRY_DISABLED=1
 
